--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<title>Brew Krew</title>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTwGRSfyvfOUMH84GTW-i0werk9UHSOF0"></script>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTwGRSfyvfOUMH84GTW-i0werk9UHSOF0"></script>
 		<script src="./src/index.js"></script>
   </head>
   <body>
