--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 		<meta charset="utf-8">
 		<link rel="icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTwGRSfyvfOUMH84GTW-i0werk9UHSOF0"></script>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTwGRSfyvfOUMH84GTW-i0werk9UHSOF0"></script>
 		<script src="./src/index.js"></script>
   </head>
   <body>
